--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Clothing Store</title>
+    <title>Georgiani Faggotini - Home</title>
 </head>
 <body>
     <header class="header">
-        <h1>Clothing Store</h1>
+        <h1>Georgiani Faggotini</h1>
+        <h2>Leading fashion trends since 2023</h2>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="#">Men</a></li>
+                <li><a href="#">Women</a></li>
+                <li><a href="#">Children</a></li>
+                <li><a href="#">Non-binary</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -23,9 +27,9 @@
         <section class="products">
             <!-- Product cards go here -->
             <div class="product-card">
-                <img src="product1.jpg" alt="Product 1">
-                <h2>Product 1</h2>
-                <p>Price: $29.99</p>
+                <img src="img/il_tinfoglio.png" alt="Il Tinfoglio">
+                <h2>Il Tinfoglio</h2>
+                <p>Price: $4.99</p>
             </div>
             <div class="product-card">
                 <img src="product2.jpg" alt="Product 2">
@@ -37,7 +41,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2023 Clothing Store. All rights reserved.</p>
+        <p>&copy; 2023 Georgiani Faggotini. All rights reserved.</p>
     </footer>
 </body>
 </html>
