--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
             <!-- Product cards go here -->
             <div class="product-card">
                 <img src="img/il_tinfoglio.png" alt="Il Tinfoglio">
-                <h2>Il Tinfoglio</h2>
+                <h2><a>Il Tinfoglio</a></h2>
                 <p>Price: $4.99</p>
+                <p>The apex of chapeau perfection. 100% tin foil. Made in Italy.</p>
             </div>
             <div class="product-card">
                 <img src="product2.jpg" alt="Product 2">
-                <h2>Product 2</h2>
+                <h2><a>Product 2</a></h2>
                 <p>Price: $39.99</p>
+                <p>Description.</p>
             </div>
             <!-- Add more product cards as needed -->
         </section>
