--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <img src="img/il_tinfoglio.png" alt="Il Tinfoglio">
                 <h2><a>Il Tinfoglio</a></h2>
                 <p>Price: $4.99</p>
-                <p>The apex of chapeau perfection. 100% tin foil. Made in Italy.</p>
+                <p>The apex of chapeau perfection. 100% premium-quality aluminium. Made in Italy.</p>
             </div>
             <div class="product-card">
                 <img src="product2.jpg" alt="Product 2">
