introducing il banano

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <p>The apex of chapeau perfection. 100% premium-quality aluminium. Made in Italy.</p>
             </div>
             <div class="product-card">
-                <img src="product2.jpg" alt="Product 2">
-                <h2><a>Product 2</a></h2>
+                <img src="img/il_banano.png" alt="Il Banano">
+                <h2><a>Il Banano</a></h2>
                 <p>Price: $39.99</p>
-                <p>Description.</p>
+                <p>Peak exquisiteness of modern neckwear. 95% Fine Costa Rican Banana, 5% Polyester. Made in Italy.</p>
             </div>
             <!-- Add more product cards as needed -->
         </section>
