--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
                 <img src="img/il_banano.png" alt="Il Banano">
                 <h2><a>Il Banano</a></h2>
                 <p>Price: $39.99</p>
-                <p>Peak exquisiteness of modern neckwear. 95% Fine Costa Rican Banana, 5% Polyester. Made in Italy.</p>
+                <p>Peak exquisiteness of modern neckwear. 95% fine Costa Rican banana, 5% polyester. Made in Italy.</p>
+            </div>
+            <div class="product-card">
+                <img src="img/il_skinno.png" alt="Il Skinno">
+                <h2><a>Il Skinno</a></h2>
+                <p>Price: $189.99</p>
+                <p>Formality and personality had never been so close! 50% top-tier human skin, 50% fine leather fabric. Made in Italy.</p>
             </div>
             <!-- Add more product cards as needed -->
         </section>
